🩹 Fix horizontal scroll

--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -4,6 +4,7 @@
   padding-left: 15%;
   padding-right: 15%;
   padding-bottom: 30px;
+  overflow-x: hidden;
   @include for-small-desktop-only {
     padding-left: 10%;
     padding-right: 10%;
